--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="h-8 w-px bg-slate-700"></div>
-                    <button class="text-sm text-slate-400 hover:text-white transition-colors">Ayuda</button>
+                    <button @click="currentTab = 'help'" class="text-sm text-slate-400 hover:text-white transition-colors">Ayuda</button>
                     <button class="text-sm text-slate-400 hover:text-white transition-colors">Salir</button>
                 </div>
             </header>
